[package]
name = "libpci"
version = "0.1.0"
authors = ["mbratchikov"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.4", optional = true }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
regex = "1.5"
lazy_static = "1.4.0"
serde_arrays = "0.1.0"
extfmt = "0.1.1"
modular-bitfield = "0.11.2"
displaydoc = "0.2.2"
byte = "0.2.6"
kmod = { version = "0.4.0", optional = true }
pcics = { path = "../pcics" }

[dev-dependencies]
pretty_assertions = "0.7"
regex = "1.5"
tempfile = "3.2"
rand = "0.8"
serde_json = "1.0.64"

[build-dependencies]
cc = "1.0"

[features]
sudo = []

[[bin]]         
name = "pci"
required-features = ["clap", "kmod"]

